# mmg_simulator

./: CMakeLists.txt  README.md
include/: dynamic_solver.hpp  mmg_models.hpp  mmg_parameter.hpp  mmg_variable.hpp  physical_const.hpp
src/: #mmg_models.cpp#  .#mmg_models.cpp  mmg_models.cpp  mmg_parameter.cpp  simulator.cpp
